--- a/L9.2 Joins Lesson.ipynb
+++ b/L9.2 Joins Lesson.ipynb
@@ -9,9 +9,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e7fec1fa",
+   "metadata": {},
+   "source": [
+    "**Lesson Goals**:\n",
+    "\n",
+    "- Understand what it means to join tables\n",
+    "- Understand the difference between a left and right join\n",
+    "- Understand how to join multiple tables to a query"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c66f4730",
+   "id": "57771b31",
    "metadata": {},
    "outputs": [],
    "source": []
